--- a/IoraWallPaper/Resource/Base.lproj/Main.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/Main.storyboard
@@ -31,6 +31,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GAt-gH-Su7">
+                                <rect key="frame" x="0.0" y="50" width="375" height="573"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fEr-2J-Vda">
+                                    <size key="itemSize" width="143" height="117"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="WallPapeerCollectionViewCell" reuseIdentifier="WallPapeerCollectionViewCell" id="KN3-Ni-J9Q" customClass="WallPapeerCollectionViewCell" customModule="iORA" customModuleProvider="target">
+                                        <rect key="frame" x="5" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kbO-Gw-iDy">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ia9-As-I8U">
+                                                    <rect key="frame" x="15" y="15" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8m4-1T-ly9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8m4-1T-ly9" firstAttribute="leading" secondItem="kbO-Gw-iDy" secondAttribute="leading" id="0Ku-Kh-Z3p"/>
+                                                <constraint firstItem="ia9-As-I8U" firstAttribute="centerX" secondItem="kbO-Gw-iDy" secondAttribute="centerX" id="PSj-eL-SXg"/>
+                                                <constraint firstItem="8m4-1T-ly9" firstAttribute="top" secondItem="kbO-Gw-iDy" secondAttribute="top" id="RWv-qC-yL8"/>
+                                                <constraint firstAttribute="bottom" secondItem="8m4-1T-ly9" secondAttribute="bottom" id="UtL-S2-TlL"/>
+                                                <constraint firstItem="ia9-As-I8U" firstAttribute="centerY" secondItem="kbO-Gw-iDy" secondAttribute="centerY" id="sa7-JD-SPU"/>
+                                                <constraint firstAttribute="trailing" secondItem="8m4-1T-ly9" secondAttribute="trailing" id="v34-VS-PKa"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="50" height="50"/>
+                                        <connections>
+                                            <outlet property="activityIndicator" destination="ia9-As-I8U" id="E6a-xw-N3R"/>
+                                            <outlet property="wallpaperImageView" destination="8m4-1T-ly9" id="J6g-6D-Uot"/>
+                                            <segue destination="tu2-80-rfH" kind="show" id="gGO-xV-JoC"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="0V7-8L-FFn"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="hHl-nE-p7t"/>
+                                </connections>
+                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fgb-yh-tAm">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                 <subviews>
@@ -66,52 +112,6 @@
                                     <constraint firstAttribute="trailing" secondItem="fJt-G3-jMT" secondAttribute="trailing" constant="16" id="jfY-bD-9Qw"/>
                                 </constraints>
                             </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GAt-gH-Su7">
-                                <rect key="frame" x="0.0" y="50" width="375" height="573"/>
-                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fEr-2J-Vda">
-                                    <size key="itemSize" width="143" height="117"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="WallPapeerCollectionViewCell" reuseIdentifier="WallPapeerCollectionViewCell" id="KN3-Ni-J9Q" customClass="WallPapeerCollectionViewCell" customModule="iORA" customModuleProvider="target">
-                                        <rect key="frame" x="5" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kbO-Gw-iDy">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Zcy-j1-1D8">
-                                                    <rect key="frame" x="15" y="15" width="20" height="20"/>
-                                                </activityIndicatorView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8m4-1T-ly9">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="8m4-1T-ly9" firstAttribute="leading" secondItem="kbO-Gw-iDy" secondAttribute="leading" id="0Ku-Kh-Z3p"/>
-                                                <constraint firstItem="Zcy-j1-1D8" firstAttribute="centerX" secondItem="kbO-Gw-iDy" secondAttribute="centerX" id="Fah-83-aJv"/>
-                                                <constraint firstItem="8m4-1T-ly9" firstAttribute="top" secondItem="kbO-Gw-iDy" secondAttribute="top" id="RWv-qC-yL8"/>
-                                                <constraint firstAttribute="bottom" secondItem="8m4-1T-ly9" secondAttribute="bottom" id="UtL-S2-TlL"/>
-                                                <constraint firstAttribute="trailing" secondItem="8m4-1T-ly9" secondAttribute="trailing" id="v34-VS-PKa"/>
-                                                <constraint firstItem="Zcy-j1-1D8" firstAttribute="centerY" secondItem="kbO-Gw-iDy" secondAttribute="centerY" id="xIo-M3-rX5"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="50" height="50"/>
-                                        <connections>
-                                            <outlet property="activityIndicator" destination="Zcy-j1-1D8" id="FDI-hn-hQL"/>
-                                            <outlet property="wallpaperImageView" destination="8m4-1T-ly9" id="J6g-6D-Uot"/>
-                                            <segue destination="tu2-80-rfH" kind="show" id="gGO-xV-JoC"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="0V7-8L-FFn"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="hHl-nE-p7t"/>
-                                </connections>
-                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -130,6 +130,7 @@
                         <outlet property="blogButton" destination="fJt-G3-jMT" id="aQG-Cb-Dta"/>
                         <outlet property="collectionView" destination="GAt-gH-Su7" id="Pn6-I0-eMe"/>
                         <outlet property="instaButton" destination="Y0m-MG-Q7O" id="TCe-7Y-Ox2"/>
+                        <outlet property="navigationView" destination="fgb-yh-tAm" id="qwt-IN-pbo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
